src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/invalid/UserIDInvalidException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.invalid;

public class UserIDInvalidException extends RuntimeException {
    public UserIDInvalidException(String message) {
        super(message);
    }
    
}
